Atrocious levels of jank in only one window on Linux
Categories
(Core :: Graphics, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox105 | --- | fixed |
People
(Reporter: chutten|PTO, Assigned: aosmond)
References
Details
Attachments
(1 file)
I'm seeing 100-200ms jank events in the parent process that aren't a lot of fun. Latest nightlies. Linux. Happening since at least Friday.
Appears to happen reliably on the first window of a two-window many-tab session if the tab strip is scrolled to the end (to the right).
Here's another profile of about:performance janking, if it helps: https://share.firefox.dev/3zX823M
I'm going to try to get a regression window next. ni?aosmond because :jrmuizel told me to.
| Reporter | ||
Comment 1•3 years ago
|
||
mozregression doesn't want to load my profile [Errno 2] No such file or directory: '/home/chutten/.mozilla/firefox/ed6wehqr.worksync/chrome_debugger_profile/lock'. And anyway, when I restarted back into the same build it wouldn't recur.
It came close to having the same symptoms when I switched to a tab that was a JSON view of a loaded "main" ping data: URI (about:telemetry > Current data -> Archived ping data > Choose a "main" ping > Raw JSON), but as soon as I switch away from that tab, the performance goes back to normal. I'll monitor it.
| Assignee | ||
Comment 2•3 years ago
|
||
The parent process is spending a lot of time in the RWLock objects. Looking at gfxFont::Measure, it does lock and unlock the extent lock an inordinate amount. I think we can do better.
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
Comment 5•3 years ago
|
||
| bugherder | ||
Description
•